app/src/main/java/com/example/truckercore/shared/errors/InvalidUrlFormatException.kt
package com.example.truckercore.shared.errors

class InvalidUrlFormatException(message: String? = null): Exception(message)